--- a/index.html
+++ b/index.html
@@ -105,6 +105,17 @@
         </div>
     </div>
 
+    <script type="text/javascript">
+	atOptions = {
+		'key' : 'd7dc75e4d292fc502a7d4d31f92e40d3',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/d7dc75e4d292fc502a7d4d31f92e40d3/invoke.js"></script>
+    <script type='text/javascript' src='//pl26281795.effectiveratecpm.com/89/67/38/89673892c9acfc72e1769c98777e39fb.js'></script>
     <script async="async" data-cfasync="false" src="//pl26281465.effectiveratecpm.com/699478c85d48be55051a6a1b0fe994de/invoke.js"></script>
     <div id="container-699478c85d48be55051a6a1b0fe994de"></div>
 
